--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <app-post-form></app-post-form>
+  <app-post-form
+    (onAdd)="updatePosts($event)"
+  ></app-post-form>
 
   <hr />
 
