--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,12 @@
   <app-post
     *ngFor="let p of posts"
     [post]="p"
-
-  ></app-post>
+  >
+    <small *ngIf="p.text.length>10; else short">Пост длинный</small>
+    <ng-template #short>
+      <small>Пост короткий</small>
+    </ng-template>
+  </app-post>
 
 </div>
 
