--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <app-post
     *ngFor="let p of posts"
     [post]="p"
+    (onRemove)="removePost($event)"
   >
     <div #info>
       <small *ngIf="p.text.length>10; else short">Пост длинный</small>
