--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <h2>{{post.title}}</h2>
   <p>{{post.text}}</p>
-
-   <ng-content></ng-content>
+  <button class="btn" (click)="removePost()">&times;</button>
+  <ng-content></ng-content>
 </div>
