--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
+  <h2>Sub header</h2>
+
   <app-post-form
     (onAdd)="updatePosts($event)"
   ></app-post-form>
