--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,6 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <h2>Sub header</h2>
-
-  <app-post-form
-    (onAdd)="updatePosts($event)"
-  ></app-post-form>
-
-  <hr/>
-
-  <app-post
-    *ngFor="let p of posts"
-    [post]="p"
-    (onRemove)="removePost($event)"
-  >
-    <div #info>
-      <small *ngIf="p.text.length>10; else short">Пост длинный</small>
-      <ng-template #short>
-        <small>Пост короткий</small>
-      </ng-template>
-    </div>
-  </app-post>
-
+<p appStyle>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, explicabo.</p>
 </div>
 
