--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,17 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-<p appStyle>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, explicabo.</p>
+<p
+  appStyle="yellow"
+  fontWeight="bold"
+  [dStyle]="{border:'1px solid blue',borderRadius:'5px'}"
+>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, explicabo.
+</p>
+<p
+  appStyle="red"
+  fontWeight="bold"
+  [dStyle]="{border:'2px solid yellow',borderRadius:'15px'}"
+>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, explicabo.
+</p>
 </div>
 
