--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <p>{{e | number:'1.1-5'}}</p>
-  <p>{{e | number:'3.1-2'}}</p>
-  <p>{{e | number:'1.0-0'}}</p>
+  <p>{{str | uppercase | lowercase| titlecase}}</p>
+  <p>{{str | titlecase | slice:1:-2}}</p>
 </div>
 
