--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <p>{{str | uppercase | lowercase| titlecase}}</p>
-  <p>{{str | titlecase | slice:1:-2}}</p>
+  <p>{{date | date:'d MMM yyy, hh:mm'}}</p>
 </div>
 
