--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <p>{{date | date:'d MMM yyy, hh:mm'}}</p>
+  <p>{{float}}</p>
+  <p>{{float | currency}}</p>
+  <p>{{float | percent}}</p>
+
+  <pre>{{obj | json}}</pre>
 </div>
 
