--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <p>{{float}}</p>
-  <p>{{float | currency}}</p>
-  <p>{{float | percent}}</p>
-
-  <pre>{{obj | json}}</pre>
+  <p>{{float | mult: 4}}</p>
+  <p>{{10 | mult: 13}}</p>
 </div>
 
