--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <p>{{float | mult: 4}}</p>
-  <p>{{10 | mult: 13}}</p>
+  <p>{{'Hello world    ' | exMarks}}</p>
 </div>
 
