--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,11 @@
 
   <button class="btn" (click)="searchField = 'title'">Title</button>
   <button class="btn" (click)="searchField = 'text'">Text</button>
+
+  <hr>
+
+  <button class="btn" (click)="addPost()">Добавить новый пост</button>
+
   <label>
     <input type="text" [(ngModel)]="search">
   </label>
