--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,11 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
-  <button class="btn" (click)="searchField = 'title'">Title</button>
-  <button class="btn" (click)="searchField = 'text'">Text</button>
+  <p>Wait for it ... {{ p | async }}</p>
 
-  <hr>
+  <p>Date: {{ date$ | async | date: 'hh:mm:ss dd/MM/yyyy' }}</p>
 
-  <button class="btn" (click)="addPost()">Добавить новый пост</button>
+<!--  <p>Date: {{ date | date: 'hh:mm:ss dd/MM/yyyy' }}</p>-->
 
-  <label>
-    <input type="text" [(ngModel)]="search">
-  </label>
-
-  <div
-    class="card"
-    *ngFor="let post of posts | filter:search:searchField"
-  >
-    <h2>{{post.title}}</h2>
-    <p>{{post.text}}</p>
-  </div>
 </div>
 
