--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,19 @@
 <div class="container">
   <h1>Hello Angular!!</h1>
 
- <div class="card">
-   <h2>App Counter: {{appCounterService.counter}}</h2>
+  <div class="card">
+    <h2>App Counter: {{appCounterService.counter}}</h2>
 
-   <button class="btn" (click)="appCounterService.increase()">+</button>
-   <button class="btn" (click)="appCounterService.decrease()">-</button>
- </div>
+    <button class="btn" (click)="appCounterService.increase()">+</button>
+    <button class="btn" (click)="appCounterService.decrease()">-</button>
+  </div>
+
+  <div class="card">
+    <h2>Local Counter: {{localCounterService.counter}}</h2>
+
+    <button class="btn" (click)="localCounterService.increase()">+</button>
+    <button class="btn" (click)="localCounterService.decrease()">-</button>
+  </div>
+
 </div>
 
