--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,8 @@
     <button class="btn" (click)="localCounterService.decrease()">-</button>
   </div>
 
+  <hr>
+
+  <app-counter></app-counter>
 </div>
 
