--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,52 @@
 <div class="container">
-  <h1>Hello Angular!!</h1>
+  <form class="card" [formGroup]="form" (ngSubmit)="submit()">
+    <h1>Angular Forms</h1>
 
-  <div class="card">
-    <h2>App Counter: {{appCounterService.counter}}</h2>
+    <div class="form-control">
+      <label>Email</label>
+      <input type="text" placeholder="Email">
+      <div class="validation"></div>
+    </div>
 
-    <button class="btn" (click)="appCounterService.increase()">+</button>
-    <button class="btn" (click)="appCounterService.decrease()">-</button>
-  </div>
+    <div class="form-control">
+      <label>Пароль</label>
+      <input type="password" placeholder="Пароль">
+      <div class="validation"></div>
+    </div>
 
-  <div class="card">
-    <h2>Local Counter: {{localCounterService.counter}}</h2>
+    <div class="card">
+      <h2>Адрес</h2>
 
-    <button class="btn" (click)="localCounterService.increase()">+</button>
-    <button class="btn" (click)="localCounterService.decrease()">-</button>
-  </div>
+      <div class="form-control">
+        <label>Страна</label>
 
-  <hr>
+        <select>
+          <option value="ru">Россия</option>
+          <option value="ua">Украина</option>
+          <option value="by">Беларусь</option>
+        </select>
+      </div>
 
-  <app-counter></app-counter>
+      <div class="form-control">
+        <input type="text">
+      </div>
+
+      <button class="btn" type="button">Выбрать столицу</button>
+    </div>
+
+    <div class="card">
+      <h2>Ваши навыки</h2>
+      <button class="btn" type="button">Добавить умение</button>
+      <div class="form-control">
+        <label></label>
+        <input type="text">
+      </div>
+    </div>
+
+    <button class="btn" type="submit">Отправить</button>
+
+  </form>
 </div>
+
+
 
