--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,36 @@
     <div class="form-control">
       <label>Email</label>
       <input type="text" placeholder="Email" formControlName="email">
-      <div class="validation"></div>
+      <pre>{{form.get('email').errors | json}}</pre>
+      <div
+        *ngIf="form.get('email').invalid && form.get('email').touched"
+        class="validation"
+      >
+        <small *ngIf="form.get('email').errors.required">
+          Поле email не может быть пустым
+        </small>
+        <small *ngIf="form.get('email').errors.email">
+          Введите корректный email
+        </small>
+      </div>
     </div>
 
     <div class="form-control">
       <label>Пароль</label>
       <input type="password" placeholder="Пароль" formControlName="password">
-      <div class="validation"></div>
+      <pre>{{form.get('password').errors | json}}</pre>
+      <div
+        *ngIf="form.get('password').invalid && form.get('password').touched"
+        class="validation"
+      >
+        <small *ngIf="form.get('password').errors.required">
+          Пароль не может быть пустым
+        </small>
+        <small *ngIf="form.get('password').errors.minlength">
+          Длина должна быть не менее {{form.get('password').errors.minlength.requiredLength}}.
+          Сейчас количество символов: {{form.get('password').errors.minlength.actualLength}}
+        </small>
+      </div>
     </div>
 
     <div class="card">
