--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="form-control">
       <label>Email</label>
       <input type="text" placeholder="Email" formControlName="email">
-      <pre>{{form.get('email').errors | json}}</pre>
+<!--      <pre>{{form.get('email').errors | json}}</pre>-->
       <div
         *ngIf="form.get('email').invalid && form.get('email').touched"
         class="validation"
@@ -22,7 +22,7 @@
     <div class="form-control">
       <label>Пароль</label>
       <input type="password" placeholder="Пароль" formControlName="password">
-      <pre>{{form.get('password').errors | json}}</pre>
+<!--      <pre>{{form.get('password').errors | json}}</pre>-->
       <div
         *ngIf="form.get('password').invalid && form.get('password').touched"
         class="validation"
@@ -37,13 +37,13 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" formGroupName="address">
       <h2>Адрес</h2>
 
       <div class="form-control">
         <label>Страна</label>
 
-        <select>
+        <select formControlName="country">
           <option value="ru">Россия</option>
           <option value="ua">Украина</option>
           <option value="by">Беларусь</option>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="form-control">
-        <input type="text">
+        <input type="text" formControlName="city" placeholder="Город">
       </div>
 
       <button class="btn" type="button">Выбрать столицу</button>
