--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
   <div class="card">
     <div class="form-control">
       <label>
-        <input type="text" placeholder="Название">
+        <input type="text" placeholder="Название" [(ngModel)]="todoTitle">
       </label>
     </div>
-    <button class="btn">Добавить</button>
+    <button class="btn" (click)="addTodo()">Добавить</button>
     <button class="btn">Загрузить</button>
   </div>
 
