--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,20 +8,26 @@
       </label>
     </div>
     <button class="btn" (click)="addTodo()">Добавить</button>
-    <button class="btn">Загрузить</button>
+    <button class="btn" (click)="fetchTodos()">Загрузить</button>
   </div>
 
   <hr>
 
-  <div class="card" *ngFor="let todo of todos">
-    <p>
-      <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
-      <span>
+  <div *ngIf="!loading; else loadingBlock">
+    <div class="card" *ngFor="let todo of todos">
+      <p>
+        <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
+        <span>
         <button class="btn btn-danger">Удалить</button>
         <button class="btn" [disabled]="todo.completed">Завершить</button>
       </span>
-    </p>
+      </p>
+    </div>
   </div>
+
+  <ng-template #loadingBlock>
+    <p>Loading...</p>
+  </ng-template>
 
 </div>
 
