--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
           <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
           <span>
         <button class="btn btn-danger" (click)="removeTodo(todo.id)">Удалить</button>
-        <button class="btn" [disabled]="todo.completed">Завершить</button>
+        <button class="btn" (click)="completeTodo(todo.id)" [disabled]="todo.completed">Завершить</button>
       </span>
         </p>
       </div>
