--- a/src/styles.scss
+++ b/src/styles.scss
@@ -134,10 +134,10 @@ hr {
 
   ul {
     display: flex;
-    
+
     li.active a {
       font-weight: bold;
-      color: #333333;
+      color: #c00;
       cursor: default;
     }
   }
