--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <nav class="navbar">
-  <h1>Angular Unix Tests</h1>
+  <h1>
+    <a>Angular Tests</a>
+  </h1>
 </nav>
+
+<app-counter></app-counter>
