--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,4 +1,6 @@
+<div class="container">
 <h1 class="counter" [class.green]="counter % 2 === 0">{{counter}}</h1>
 
-<button id="increment" (click)="increment()">Increment</button>
-<button (click)="decrement()">Decrement</button>
+<button id="increment" (click)="increment()" class="btn">Increment</button>
+<button (click)="decrement()" class="btn">Decrement</button>
+</div>
