--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -4,3 +4,9 @@
 <button id="increment" (click)="increment()" class="btn">Increment</button>
 <button (click)="decrement()" class="btn">Decrement</button>
 </div>
+
+<style>
+  .green {
+    color: green;
+  }
+</style>
