--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<nav class="navbar">
-  <h1>
-    <a>Angular Tests</a>
-  </h1>
-</nav>
-
-<app-counter></app-counter>
+<div class="wrap">
+  <div class="box"></div>
+</div>
